--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -19,10 +19,14 @@ Quam alias culpa eius iste ipsum maiores fuga error earum aut dolorum at sunt of
 
 </ul>
 
-<ol>
+<ol type="I">
     <li>meu malvado favorito</li>
     <li>vingadores:ultimato</li>
 </ol>
+<img src="foto de perfil.jpg" alt="darth vader demostrando a força" width="200" height="200">
+<a href="https://github.com/ismarsi-matheus" target="_blank"> github perfil cavanha </a>
+
+
 
     
 </body>
