--- a/o incrivel mundo de gumball/serie.html
+++ b/o incrivel mundo de gumball/serie.html
@@ -7,7 +7,36 @@
 </head>
 <body>
     <h1>O incrivel mundo de gumball</h1>
+    <h2>Sinopse</h2>
+    <p>O Incrível Mundo de Gumball acompanha o gato azul Gumball Watterson, de 12 anos, e sua família em suas aventuras e confusões na cidade de Elmore. Sempre acompanhado de seu irmão Darwin, eles navegam as brincadeiras e dilemas da pré-adolescência em uma cidade repleta de criaturas peculiares</p>
+    <h2>Personagens</h2>
+    <ol>
+        <li>Gumball</li>
+        <li>Darwin</li>
+        <li>Anais</li>
+        <li>Nicole</li>
+        <li>Ricardo</li>
+        <li>Vovó JoJo</li>
+        <li>Fankie</li>
+        <li>Louie</li>
+        <li>Tartaruga Maligna</li>
+        <li>Senhor e Senhora Senicourt</li>
+    </ol>
+    <h2>Episodios</h2>
+    <ol>
+        <li>O Casamento</li>
+        <li>O Amor</li>
+        <li>As Escolhas</li>
+        <li>O Amigo</li>
+        <li>A Tempestade</li>
+        <li>Natal</li>
+        <li>Os Imitadores</li>
+        <li>A Concha</li>
+        <li>O Clube</li>
+        <li>A Furia</li>
+    </ol>
     
+
     
 </body>
 </html>
