montagem do site

--- a/o incrivel mundo de gumball/serie.html
+++ b/o incrivel mundo de gumball/serie.html
@@ -25,17 +25,26 @@
     <h2>Episodios</h2>
     <ol>
         <li>O Casamento</li>
+        <img src="O casamento.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>O Amor</li>
+        <img src="O amor.jpg" alt="imagem do episodio"width="300" height="200"> 
         <li>As Escolhas</li>
+        <img src="As escolhas.jpg" alt="imagem do episodio" width="300" height="200">
         <li>O Amigo</li>
+        <img src="O amigo.jpg" alt="imagem do episodio" width="300" height="200">
         <li>A Tempestade</li>
+        <img src="A tempestade.jpg" alt="imagem do episodio" width="300" height="200">
         <li>Natal</li>
+        <img src="natal.jpg" alt="imagem do episodio"width="300" height="200">
         <li>Os Imitadores</li>
+        <img src="Os imitadores.jpg" alt="imagem do episodio" width="300" height="200">
         <li>A Concha</li>
+        <img src="A concha.jpg" alt="imagem do episodio" width="300" height="200">
         <li>O Clube</li>
+        <img src="O clube.jpg" alt="imagem do episodio" width="300" height="200">
         <li>A Furia</li>
+        <img src="A furia.jpg" alt="imagem do episodio"width="300" height="200">
     </ol>
-    
 
     
 </body>
