--- a/o incrivel mundo de gumball/serie.html
+++ b/o incrivel mundo de gumball/serie.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O incrivel mundo de gumball</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+
+
+
     <h1>O incrivel mundo de gumball</h1>
     <h2>Sinopse</h2>
     <p>O Incrível Mundo de Gumball acompanha o gato azul Gumball Watterson, de 12 anos, e sua família em suas aventuras e confusões na cidade de Elmore. Sempre acompanhado de seu irmão Darwin, eles navegam as brincadeiras e dilemas da pré-adolescência em uma cidade repleta de criaturas peculiares</p>
@@ -25,25 +29,25 @@
     <h2>Episodios</h2>
     <ol>
         <li>O Casamento</li>
-        <img src="O casamento.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_casamento.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>O Amor</li>
-        <img src="O amor.jpg" alt="imagem do episodio"width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_amor.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>As Escolhas</li>
-        <img src="As escolhas.jpg" alt="imagem do episodio" width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/As_escolhas.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>O Amigo</li>
-        <img src="O amigo.jpg" alt="imagem do episodio" width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_amigo.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>A Tempestade</li>
-        <img src="A tempestade.jpg" alt="imagem do episodio" width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/A_tempestade.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>Natal</li>
-        <img src="natal.jpg" alt="imagem do episodio"width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/natal.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>Os Imitadores</li>
-        <img src="Os imitadores.jpg" alt="imagem do episodio" width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/Os_imitadores.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>A Concha</li>
-        <img src="A concha.jpg" alt="imagem do episodio" width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/A_concha.jpg" alt="imagem do episodio" width="300" height="200">  
         <li>O Clube</li>
-        <img src="O clube.jpg" alt="imagem do episodio" width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_clube.jpg" alt="imagem do episodio" width="300" height="200"> 
         <li>A Furia</li>
-        <img src="A furia.jpg" alt="imagem do episodio"width="300" height="200">
+        <img src="../o incrivel mundo de gumball/assets/imagens/A _furia.jpg" alt="imagem do episodio" width="300" height="200"> 
     </ol>
 
     
