--- a/o incrivel mundo de gumball/serie.html
+++ b/o incrivel mundo de gumball/serie.html
@@ -29,25 +29,25 @@
     <h2>Episodios</h2>
     <ol>
         <li>O Casamento</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/O_casamento.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_casamento.jpg" alt="imagem do episodio" class="galeria">   
         <li>O Amor</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/O_amor.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_amor.jpg" alt="imagem do episodio"class="galeria">   
         <li>As Escolhas</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/As_escolhas.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/As_escolhas.jpg" alt="imagem do episodio"class="galeria">   
         <li>O Amigo</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/O_amigo.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_amigo.jpg" alt="imagem do episodio"class="galeria">   
         <li>A Tempestade</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/A_tempestade.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/A_tempestade.jpg" alt="imagem do episodio"class="galeria">   
         <li>Natal</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/natal.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/natal.jpg" alt="imagem do episodio"class="galeria">   
         <li>Os Imitadores</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/Os_imitadores.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/Os_imitadores.jpg" alt="imagem do episodio"class="galeria">   
         <li>A Concha</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/A_concha.jpg" alt="imagem do episodio" width="300" height="200">  
+        <img src="../o incrivel mundo de gumball/assets/imagens/A_concha.jpg" alt="imagem do episodio"class="galeria">    
         <li>O Clube</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/O_clube.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/O_clube.jpg" alt="imagem do episodio"class="galeria">   
         <li>A Furia</li>
-        <img src="../o incrivel mundo de gumball/assets/imagens/A _furia.jpg" alt="imagem do episodio" width="300" height="200"> 
+        <img src="../o incrivel mundo de gumball/assets/imagens/A_furia.jpg" alt="imagem do episodio"   
     </ol>
 
     
