--- a/tabela/index.html
+++ b/tabela/index.html
@@ -3,33 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>MInha primeira tabela</title>
 </head>
 <body>
     <table>
            <thead>
-                <tr>
-                    <th scope="col">A</th>
-                    <th scope="col">B</th>
-                    <th scope="col">C</th>
-                </tr>
+                <tr><!--começo da linha-->
+                    <th scope="col">Aluno</th>
+                    <th scope="col">Conhecimento</th>
+                    <th scope="col">Idade</th>
+                </tr><!--fim da linha-->
            </thead> 
            <tbody>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
+                <td> walmir</td>
+                <td> Java</td>
+                <td> 58</td>
             </tr>
-            <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-            </tr>
+            <td> cristina</td>
+            <td> Javascript</td>
+            <td> 23</td>
            </tbody>
     </table>
 </body>
