--- a/tabela/index.html
+++ b/tabela/index.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>MInha primeira tabela</title>
 </head>
+
 <body>
     <table>
-           <thead>
-                <tr><!--começo da linha-->
-                    <th scope="col">Aluno</th>
-                    <th scope="col">Conhecimento</th>
-                    <th scope="col">Idade</th>
-                </tr><!--fim da linha-->
-           </thead> 
-           <tbody>
+        <thead>
+            <tr><!--começo da linha-->
+                <th scope="col">Aluno</th>
+                <th scope="col">Conhecimento</th>
+                <th scope="col">Idade</th>
+            </tr><!--fim da linha-->
+        </thead>
+        <tbody>
             <tr>
                 <td> walmir</td>
                 <td> Java</td>
                 <td> 58</td>
             </tr>
-            <td> cristina</td>
-            <td> Javascript</td>
-            <td> 23</td>
-           </tbody>
+            <tr>
+                <td> cristina</td>
+                <td> Javascript</td>
+                <td> 23</td>
+            </tr>
+            <tr>
+                <td>Antonio</td>
+                <td>c#</td>
+                <td>25</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="2">Media de Idade</th>
+                <th>33</th>
+            </tr>
+        </tfoot>
     </table>
 </body>
+
 </html>
